# NestingGraph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NFPGeneratoOLDr.h  README.md  build.bat  vcpkg.json
Inputs/Instances/: J1.txt  J2.txt  artif.txt  blaz.txt  blaz2.txt  dagli.txt  fu.txt  poly_jakobs.txt  rco.txt  shapes.txt  shirts.txt  three.txt
Inputs/Test/: multiInstance.json  singleInstance.json  singleInstance2.json
Inputs/Test/folder/: multiInstance.json  rawDatasetBoard.json  singleInstance.json
Inputs/dataset/: artif.json  artif2.json  blaz.json  jigsawPackingJ20.json  shapes.json  shirts.json
src/: EdgeCliqueCover.cpp  NFPGen.cpp  NFPTest.cpp  NestingGraph.cpp
src/common/: NFPGenerator.h  geometry_util.cpp  geometry_util.hpp  graph.hpp  nfp_lib.cpp  nfp_lib.hpp
